# tillandsias

./: .gitattributes  .gitignore  @methodology.yaml  AGENTS.md  CACHE_SEMANTICS_ARCHITECTURE.md  CLAUDE.md  CONVERGENCE_MODEL_SUMMARY.md  CONVERGENCE_WORKFLOW.md  Cargo.toml  DIAGNOSTICS_STREAM_IMPLEMENTATION.md  ForgeAudit_20260519T164526Z.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_REPORT.md  LITMUS_FRAMEWORK_DESIGN_SUMMARY.md  Monotonic reduction of uncertainty under verifiable constraints.yaml  PHASE_3_DESIGN.md  PHASE_4_DESIGN.md  PHASE_5_DESIGN.md  README-ABOUT.md  README.md  RELEASE-HANDOFF.md  RELEASE-NOTES.md  SECRETS.md  TILLANDSIAS-RELEASE.md  TILLANDSIAS.md  TRACES.md  TestFromForge.md  TillandsiasAudit_BigPickle_2026-04-28T14-00.md  VERIFICATION_LEVELS_OVERVIEW.md  VERSION  WAVE3-COMPLETION-SUMMARY.md  bootstrap.yaml  build-all-images.sh  build-forge.sh  build-git.sh  build-inference.sh  build-local.ps1  build-local.sh  build-osx.sh  (+32 more)
crates/tillandsias-browser-mcp/: Cargo.toml  build.rs
crates/tillandsias-browser-mcp/src/: allowlist.rs  cdp_client.rs  framing.rs  launcher.rs  lib.rs  server.rs  window_registry.rs
crates/tillandsias-browser-mcp/tests/: allowlist_enforcement_integration.rs  window_timeout_enforcement.rs
crates/tillandsias-compose/: Cargo.toml
crates/tillandsias-compose/src/: lib.rs
crates/tillandsias-control-wire/: Cargo.toml
crates/tillandsias-control-wire/src/: guest_transport.rs  lib.rs  transport.rs
crates/tillandsias-core/: Cargo.toml  build.rs
crates/tillandsias-core/src/: cache_validation.rs  config.rs  container_profile.rs  event.rs  format.rs  genus.rs  icons.rs  image_builder.rs  lib.rs  preflight.rs  project.rs  remote_projects.rs  secrets.rs  singleton.rs  state.rs  tools.rs
crates/tillandsias-core/tests/: cache_corruption_recovery.rs  forge_shell_tools.rs  gh_auth_deploy_key.rs  project_discovery.rs
crates/tillandsias-headless/: Cargo.toml  build.rs
crates/tillandsias-headless/src/: agent_result.rs  auth.rs  catalog.rs  cloud_projects.rs  container_deps.rs  control_dispatch.rs  event_pusher.rs  local_projects.rs  main.rs  metrics_server.rs  pty_handler.rs  remote_projects.rs  resource_lock.rs  runtime_assets.rs  runtime_phase.rs  vault_bootstrap.rs  vsock_server.rs
crates/tillandsias-headless/tests/: cache_peer_routing.rs  e2e_user_flow.rs  error_recovery.rs  network_validation.rs  proxy_cache_policy.rs  rapid_project_switch.rs  rapid_project_switch_v2.rs  signal_handling.rs  singleton_coexistence.rs  stress_concurrent_operations.rs  vault_approle_provisioning.rs  vsock_listener_e2e.rs
crates/tillandsias-host-shell/: Cargo.toml  build.rs
crates/tillandsias-host-shell/src/: lib.rs  lifecycle.rs  menu_action.rs  menu_state.rs  provisioning.rs  scanner.rs  subscription_health.rs  vsock_client.rs
crates/tillandsias-litmus-rust/: Cargo.toml
crates/tillandsias-litmus-rust/src/: lib.rs  main.rs
crates/tillandsias-logging/: Cargo.toml  INTEGRATION.md
crates/tillandsias-logging/src/: aggregator.rs  budget_enforcer.rs  cardinality.rs  config.rs  dead_trace_detector.rs  error.rs  event_collector.rs  formatter.rs  lib.rs  log_entry.rs  logger.rs  query.rs  rotation.rs  sampler.rs  schema_validation.rs  span_context.rs  surface.rs
crates/tillandsias-logging/tests/: dead_trace_detection_integration.rs  event_coverage.rs  schema_version_integration.rs
crates/tillandsias-macos-tray/: Cargo.toml  build.rs
crates/tillandsias-macos-tray/assets/: Info.plist.template  Tillandsias.entitlements  icon.icns
crates/tillandsias-macos-tray/src/: action_host.rs  diagnose.rs  guest_binary.rs  installation_uuid.rs  main.rs  main_thread.rs  menu_disabled_v2.rs  pty_vsock_bridge.rs  status_item.rs  terminal_attach.rs  vz_lifecycle.rs
crates/tillandsias-metrics/: Cargo.toml
crates/tillandsias-metrics/src/: dashboard.rs  error.rs  lib.rs  models.rs  prometheus_exporter.rs  sampler.rs
crates/tillandsias-metrics/tests/: integration_tests.rs
crates/tillandsias-nanoclawv2-mcp/: Cargo.toml
crates/tillandsias-nanoclawv2-mcp/src/: allowlist.rs  lib.rs  main.rs  server.rs
crates/tillandsias-otp/: Cargo.toml
crates/tillandsias-otp/src/: lib.rs
crates/tillandsias-plan/: Cargo.toml
crates/tillandsias-plan/src/: lib.rs  main.rs
crates/tillandsias-podman/: Cargo.toml
crates/tillandsias-podman-cli/: Cargo.toml
crates/tillandsias-podman-cli/src/: lib.rs  main.rs
crates/tillandsias-podman/src/: backend.rs  cache_semantics.rs  client.rs  container_spec.rs  diagnostic_event_emitter.rs  diagnostics.rs  diagnostics_filter.rs  diagnostics_stream.rs  events.rs  gpu.rs  launch.rs  lib.rs  peer_table.rs  policy.rs  runtime.rs
crates/tillandsias-podman/tests/: podman_integration.rs
crates/tillandsias-policy/: Cargo.toml
crates/tillandsias-policy/src/: main.rs
crates/tillandsias-repeat-graph/: Cargo.toml
crates/tillandsias-repeat-graph/src/: main.rs
crates/tillandsias-router-sidecar/: Cargo.toml
crates/tillandsias-router-sidecar/src/: http.rs  main.rs
crates/tillandsias-router-sidecar/tests/: caddy_reload_integration.rs  connect_loop.rs  (+1 more)
crates/tillandsias-scanner/: Cargo.toml
crates/tillandsias-secure-channel/: Cargo.toml
crates/tillandsias-vault-client/: Cargo.toml
crates/tillandsias-vm-layer/: Cargo.toml
crates/tillandsias-windows-tray/: Cargo.toml  build.rs
crates/tillandsias-zeroclaw/: Cargo.toml
src-tauri/: Cargo.toml  appdata.xml  build.rs  desktop-template.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accountability.rs  browser.rs  browser_tool.rs  build_lock.rs  ca.rs  cdp.rs  chromium_launcher.rs  chromium_resolve.rs  cleanup.rs  cli.rs  desktop.rs  desktop_env.rs  diagnostics.rs  embedded.rs  event_loop.rs  github.rs  github_health.rs  gpu.rs  handlers.rs  i18n.rs  image_builder.rs  inference_lazy_pull.rs  init.rs  launch.rs  lib.rs  log_format.rs  logging.rs  main.rs  mcp_browser.rs  menu.rs  mirror_sync.rs  otp.rs  podman_secret.rs  preflight.rs  pull_cache_budget.rs  runner.rs  secrets.rs  singleton.rs  strings.rs  token_files.rs  (+9 more)
(+3675 files in other folders)
