[workspace]
members = [
    "crates/tillandsias-core",
    "crates/tillandsias-otp",
    "crates/tillandsias-podman",
    "crates/tillandsias-scanner",
    "src-tauri",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Tlatoani"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
bytes = "1"
notify = "8"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
thiserror = "2"

# Internal crates
tillandsias-core = { path = "crates/tillandsias-core" }
tillandsias-otp = { path = "crates/tillandsias-otp" }
tillandsias-podman = { path = "crates/tillandsias-podman" }
tillandsias-scanner = { path = "crates/tillandsias-scanner" }
