[workspace]
members = [
    "crates/tillandsias-browser-mcp",
    "crates/tillandsias-control-wire",
    "crates/tillandsias-core",
    "crates/tillandsias-headless",
    "crates/tillandsias-logging",
    "crates/tillandsias-metrics",
    "crates/tillandsias-otp",
    "crates/tillandsias-podman",
    "crates/tillandsias-repeat-graph",
    "crates/tillandsias-router-sidecar",
    "crates/tillandsias-scanner",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Tlatoani"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
postcard = { version = "1", features = ["alloc"] }
bytes = "1"
notify = "8"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
thiserror = "2"
async-trait = "0.1"
parking_lot = "0.12"
signal-hook = "0.3"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"

# Internal crates
tillandsias-browser-mcp = { path = "crates/tillandsias-browser-mcp" }
tillandsias-control-wire = { path = "crates/tillandsias-control-wire" }
tillandsias-core = { path = "crates/tillandsias-core" }
tillandsias-headless = { path = "crates/tillandsias-headless" }
tillandsias-logging = { path = "crates/tillandsias-logging" }
tillandsias-metrics = { path = "crates/tillandsias-metrics" }
tillandsias-otp = { path = "crates/tillandsias-otp" }
tillandsias-podman = { path = "crates/tillandsias-podman" }
tillandsias-scanner = { path = "crates/tillandsias-scanner" }

[profile.release]
lto = true
strip = true
codegen-units = 1
