[workspace]
members = [
    "crates/tillandsias-browser-mcp",
    "crates/tillandsias-cheatsheet-tools",
    "crates/tillandsias-control-wire",
    "crates/tillandsias-core",
    "crates/tillandsias-headless",
    "crates/tillandsias-host-shell",
    "crates/tillandsias-litmus-rust",
    "crates/tillandsias-logging",
    "crates/tillandsias-macos-tray",
    "crates/tillandsias-metrics",
    "crates/tillandsias-otp",
    "crates/tillandsias-podman",
    "crates/tillandsias-podman-cli",
    "crates/tillandsias-policy",
    "crates/tillandsias-repeat-graph",
    "crates/tillandsias-router-sidecar",
    "crates/tillandsias-scanner",
    "crates/tillandsias-static-server",
    "crates/tillandsias-vault-client",
    "crates/tillandsias-vm-layer",
    "crates/tillandsias-windows-tray",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Tlatoani"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
postcard = { version = "1", features = ["alloc"] }
bytes = "1"
notify = "8"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
thiserror = "2"
async-trait = "0.1"
parking_lot = "0.12"
signal-hook = "0.3"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
serde_json = "1"
# A backend feature MUST be enabled or keyring v3 silently falls back to the
# in-memory *mock* keystore: set_password/get_password appear to succeed but
# persist nothing across process invocations. That made the Vault unseal key,
# the installation anchor, and the root-token handover all ephemeral, so every
# `--init`/relaunch re-derived a different unseal key and could never unseal an
# existing volume. Enable the persistent platform-native backend on each OS.
# These features are target-gated inside the keyring crate, so enabling all
# three is safe — only the host platform's backend is actually compiled.
#   - linux: async-secret-service (D-Bus Secret Service; persists to the login
#            keyring on disk, survives reboots). We use the *async* backend
#            because it speaks D-Bus via pure-Rust `zbus` rather than the
#            `libdbus-sys` C bindings the sync backend needs — keeping the musl
#            static release build self-contained (no libdbus-1 system dep).
#            Pairs with `tokio` (runtime) + `crypto-rust` (session encryption).
#   - macos: apple-native (Keychain Services).
#   - windows: windows-native (Credential Manager).
keyring = { version = "3", features = [
    "async-secret-service",
    "tokio",
    "crypto-rust",
    "apple-native",
    "windows-native",
] }
tokio-vsock = "0.6"
sha2 = "0.10"
embed-resource = "3"
tempfile = "3"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"

# Internal crates
tillandsias-browser-mcp = { path = "crates/tillandsias-browser-mcp" }
tillandsias-control-wire = { path = "crates/tillandsias-control-wire" }
tillandsias-core = { path = "crates/tillandsias-core" }
tillandsias-headless = { path = "crates/tillandsias-headless" }
tillandsias-logging = { path = "crates/tillandsias-logging" }
tillandsias-metrics = { path = "crates/tillandsias-metrics" }
tillandsias-otp = { path = "crates/tillandsias-otp" }
tillandsias-podman = { path = "crates/tillandsias-podman" }
tillandsias-scanner = { path = "crates/tillandsias-scanner" }

[profile.release]
lto = true
strip = true
codegen-units = 1
