[package]
name = "tillandsias-tray"
version = "0.1.129"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "System tray application for Tillandsias"

[dependencies]
tillandsias-core = { workspace = true }
tillandsias-scanner = { workspace = true }
tillandsias-podman = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png", "process-relaunch-dangerous-allow-symlink-macos"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
sha2 = "0.10"
hex = "0.4"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
time = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
