[package]
name = "tillandsias"
version = "0.1.167"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "System tray application for Tillandsias"

[dependencies]
tillandsias-core = { workspace = true }
tillandsias-scanner = { workspace = true }
tillandsias-podman = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png", "process-relaunch-dangerous-allow-symlink-macos"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }
# @trace spec:git-mirror-service
# inotify/FSEvents watcher for mirror→host auto-sync (mirror_sync.rs).
notify = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
# Platform-specific backends: without one of these keyring v3 builds a no-op
# mock store — writes appear to succeed but nothing lands in the OS vault.
# Linux: Secret Service over D-Bus. macOS: Keychain Services. Windows: Wincred.
# @trace spec:native-secrets-store
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust", "apple-native", "windows-native"] }
# zeroize is already pulled in transitively by keyring; declare it directly so
# we can `Zeroizing<String>`-wrap the OAuth token and wipe its heap allocation
# on drop (mitigates process-memory scrape / core-dump disclosure).
# @trace spec:secrets-management
zeroize = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
sha2 = "0.10"
hex = "0.4"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
time = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

# Unix: setsid() in tray_spawn::spawn_detached_tray() to detach the child
# from the parent's process group / controlling terminal.
# @trace spec:tray-cli-coexistence
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
