[package]
name = "tillandsias"
version = "0.1.177"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "System tray application for Tillandsias"

[dependencies]
tillandsias-control-wire = { workspace = true }
tillandsias-core = { workspace = true }
tillandsias-otp = { workspace = true }
tillandsias-scanner = { workspace = true }
tillandsias-podman = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png", "process-relaunch-dangerous-allow-symlink-macos"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tokio = { workspace = true }
# @trace spec:tray-host-control-socket
# Length-prefixed framing for the control socket. Pulled in alongside
# postcard for zero-JSON IPC between the tray and bind-mounted consumers.
tokio-util = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }
# @trace spec:git-mirror-service
# inotify/FSEvents watcher for mirror→host auto-sync (mirror_sync.rs).
notify = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
# Platform-specific backends: without one of these keyring v3 builds a no-op
# mock store — writes appear to succeed but nothing lands in the OS vault.
# Linux: Secret Service over D-Bus. macOS: Keychain Services. Windows: Wincred.
# @trace spec:native-secrets-store
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust", "apple-native", "windows-native"] }
# zeroize is already pulled in transitively by keyring; declare it directly so
# we can `Zeroizing<String>`-wrap the OAuth token and wipe its heap allocation
# on drop (mitigates process-memory scrape / core-dump disclosure).
# @trace spec:secrets-management
zeroize = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
# @trace spec:opencode-web-session-otp
# Plain WebSocket client for CDP DevTools attach. CDP devtools wraps over a
# bare ws:// on a loopback port — no TLS — so we strictly disable any TLS
# default-features. tokio-tungstenite without a TLS feature pulls only the
# tungstenite codec + tokio integration.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }
sha2 = "0.10"
hex = "0.4"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
time = "0.3"
# @trace spec:opencode-web-session-otp
# CSPRNG for per-window session-cookie / OTP minting via OsRng.
# rand 0.9 routes through getrandom which is already in the dep tree
# transitively (keyring + rustls). Direct dep here makes the security-critical
# call site explicit.
rand = "0.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_System_SystemInformation"] }

# Unix: setsid() in tray_spawn::spawn_detached_tray() to detach the child
# from the parent's process group / controlling terminal.
# @trace spec:tray-cli-coexistence
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
# HTTP-mock server for github_health.rs unit tests. Lets us classify
# responses against a local wiremock server without hitting api.github.com.
# @trace spec:simplified-tray-ux
wiremock = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
