[package]
name = "tillandsias-browser-mcp"
version = "0.1.170"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Tlatoani"]
publish = false

[dependencies]
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = "1"
postcard = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
url = "2"
uuid = { version = "1", features = ["v4"] }

# Internal crates
tillandsias-core = { workspace = true }
tillandsias-control-wire = { workspace = true }

[dev-dependencies]
tempfile = "3"
