[package]
name = "tillandsias-compose"
version = "0.1.260504"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Podman Compose orchestration for the Tillandsias enclave"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
rust-embed = { version = "8", features = ["include-exclude"] }
