[package]
name = "tillandsias-core"
version = "0.0.5"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared types, config, and serialization for Tillandsias"

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
