[package]
name = "tillandsias-core"
version = "0.1.121"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared types, config, and serialization for Tillandsias"

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
resvg = "0.45"
tiny-skia = "0.11"
