[package]
name = "tillandsias-core"
version = "0.1.260513"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared types, config, and serialization for Tillandsias"

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde_json = "1"
tillandsias-logging = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
resvg = "0.45"
tiny-skia = "0.11"
