[package]
name = "tillandsias-headless"
version = "0.1.260513"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Tlatoani"]
description = "Tillandsias native headless app lifecycle launcher"
publish = false

[[bin]]
name = "tillandsias"
path = "src/main.rs"

[dependencies]
tillandsias-core = { path = "../tillandsias-core" }
tillandsias-control-wire = { path = "../tillandsias-control-wire" }
tillandsias-logging = { path = "../tillandsias-logging" }
tillandsias-otp = { path = "../tillandsias-otp" }
tillandsias-podman = { path = "../tillandsias-podman" }
tokio = { workspace = true }
bytes = { workspace = true }
futures = "0.3"
signal-hook = "0.3"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"
reqwest = { workspace = true }

# Phase 4: Native tray UI (optional)
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
zbus = { version = "4.4.0", default-features = false, features = ["tokio"], optional = true }
zvariant = { version = "4.2.0", optional = true }

[features]
default = []
# @trace spec:linux-native-portable-executable, spec:tray-ui-integration, spec:tray-app
tray = ["image", "zbus", "zvariant"]
