[package]
name = "tillandsias-headless"
version = "0.2.260523"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Tlatoani"]
description = "Tillandsias native headless app lifecycle launcher"
publish = false

[[bin]]
name = "tillandsias"
path = "src/main.rs"

[dependencies]
tillandsias-core = { path = "../tillandsias-core" }
tillandsias-control-wire = { path = "../tillandsias-control-wire" }
tillandsias-logging = { path = "../tillandsias-logging" }
tillandsias-metrics = { path = "../tillandsias-metrics" }
tillandsias-otp = { path = "../tillandsias-otp" }
tillandsias-podman = { path = "../tillandsias-podman" }
tokio = { workspace = true }
bytes = { workspace = true }
hyper = { version = "1", features = ["full"] }
futures = "0.3"
signal-hook = "0.3"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = "1"
sha2 = "0.10"
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"
reqwest = { workspace = true }

# @trace spec:tillandsias-vault — Phase 3 POC, opt-in via `--features vault`.
tillandsias-vault-client = { path = "../tillandsias-vault-client", optional = true }
uuid = { workspace = true, optional = true }
zeroize = { version = "1", optional = true }
dirs = { workspace = true, optional = true }

# Phase 4: Native tray UI (optional)
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
zbus = { version = "4.4.0", default-features = false, features = ["tokio"], optional = true }
zvariant = { version = "4.2.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = { workspace = true, optional = true }

[features]
default = []
# @trace spec:linux-native-portable-executable, spec:tray-ui-integration, spec:tray-app
tray = ["image", "zbus", "zvariant"]
# @trace spec:vsock-transport — in-VM headless binds the control wire on vsock
# instead of the host Unix socket. Pulls in tokio-vsock and the control-wire
# crate's parallel `vsock` feature.
listen-vsock = ["tokio-vsock", "tillandsias-control-wire/vsock"]
# @trace spec:tillandsias-vault — Phase 3 POC: `tillandsias --init --with-vault`
# builds the vault image, derives the unseal key on the host, launches the
# vault container, and migrates the github token from the host keyring into
# vault. This is an OPT-IN PREVIEW; the existing keyring flow is untouched.
vault = ["tillandsias-vault-client", "uuid", "zeroize", "dirs"]
