[package]
name = "tillandsias-headless"
version = "0.3.260715"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Tlatoani"]
description = "Tillandsias native headless app lifecycle launcher"
publish = false

[[bin]]
name = "tillandsias"
path = "src/main.rs"

[dependencies]
tillandsias-core = { path = "../tillandsias-core" }
tillandsias-control-wire = { path = "../tillandsias-control-wire" }
tillandsias-logging = { path = "../tillandsias-logging" }
tillandsias-metrics = { path = "../tillandsias-metrics" }
tillandsias-otp = { path = "../tillandsias-otp" }
tillandsias-podman = { path = "../tillandsias-podman" }
tokio = { workspace = true }
bytes = { workspace = true }
hyper = { version = "1", features = ["full"] }
futures = "0.3"
signal-hook = "0.3"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = "1"
base64 = { workspace = true }
sha2 = "0.10"
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"
reqwest = { workspace = true }
tillandsias-secure-channel = { workspace = true }

# @trace spec:tillandsias-vault — Phase 6: Vault is now the default secrets
# backend for Linux. The `vault` feature is enabled by default.
tillandsias-vault-client = { path = "../tillandsias-vault-client", optional = true }
keyring = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
zeroize = { version = "1", optional = true }
dirs = { workspace = true, optional = true }

# Phase 4: Native tray UI (optional)
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
zbus = { version = "4.4.0", default-features = false, features = ["tokio"], optional = true }
zvariant = { version = "4.2.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = { workspace = true, optional = true }

[dev-dependencies]
# @trace spec:tillandsias-vault — integration tests use wiremock to exercise
# the AppRole + KV write paths without a real Vault binary. The
# vault-client crate is also imported here unconditionally so tests can
# drive the policy/role provisioning surface even when the headless
# binary is compiled without the `vault` cargo feature.
wiremock = "0.6"
tillandsias-vault-client = { path = "../tillandsias-vault-client" }

[target.'cfg(unix)'.dependencies]
# Used by the in-VM PTY handler (control-wire-pty-attach Tasks 4.x):
# openpty + ioctl(TIOCSWINSZ) + kill(SIGTERM/SIGKILL) + waitpid.
# Pulled in only on Unix targets — Windows builds skip pty_handler entirely.
nix = { version = "0.29", features = ["fs", "ioctl", "process", "signal", "socket", "term"] }

[features]
# @trace spec:tillandsias-vault — Phase 6/6.5: Vault is the only Linux
# secrets backend. Building without the `vault` feature causes the
# binary to emit a startup warning and refuse to mint git-mirror tokens
# (no fallback path exists; the --legacy-keyring-secrets flag was removed
# in v0.3). The feature is part of `default` so a stock `cargo build` ships
# the Vault flow.
default = ["vault"]
# @trace spec:linux-native-portable-executable, spec:tray-ui-integration, spec:tray-app
tray = ["image", "zbus", "zvariant"]
# @trace spec:vsock-transport — in-VM headless binds the control wire on vsock
# instead of the host Unix socket. Pulls in tokio-vsock and the control-wire
# crate's parallel `vsock` feature. PTY handler (control-wire-pty-attach)
# rides this feature since PTY-over-vsock is the only client today.
listen-vsock = ["tokio-vsock", "tillandsias-control-wire/vsock"]
# @trace spec:tillandsias-vault — Phase 6 default-on.
vault = ["tillandsias-vault-client", "uuid", "zeroize", "dirs", "keyring"]
