[package]
name = "tillandsias-host-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Portable host-side logic shared by the Windows and macOS native trays — project discovery, menu state, vsock client, VM orchestration."
publish = false

[dependencies]
tillandsias-core = { path = "../tillandsias-core" }
tillandsias-control-wire = { path = "../tillandsias-control-wire" }
tillandsias-secure-channel = { path = "../tillandsias-secure-channel" }
tillandsias-vm-layer = { path = "../tillandsias-vm-layer" }
# tillandsias-vault-client is wired in Phase 6 when vault gets surfaced in the
# tray UI. Until then it stays out of the host-shell dep graph so the Windows
# cross-build does not pull reqwest + ring (which need mingw on Linux).
# tillandsias-vault-client = { path = "../tillandsias-vault-client" }
tillandsias-scanner = { path = "../tillandsias-scanner" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
tracing = { workspace = true }
postcard = { workspace = true }
async-trait = { workspace = true }

# Windows-only: ConPTY backend for the host-side PTY (pty::windows, §3.3).
# Additive + target-gated so the Linux integration build never pulls it.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "net"] }
