[package]
name = "tillandsias-litmus-rust"
version = "0.1.260521"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Rust-aware source relevance checks for Tillandsias litmus tests"
publish = false

[[bin]]
name = "tillandsias-litmus-rust"
path = "src/main.rs"

[dependencies]
quote = "1"
regex = { workspace = true }
serde = { workspace = true }
serde_json = "1"
serde_yaml = { workspace = true }
syn = { version = "2.0.117", features = ["full"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
