[package]
name = "tillandsias-logging"
version = "0.1.260513"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Structured JSON logging layer with file rotation and spec traceability"

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "ansi"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
dirs = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
