[package]
name = "tillandsias-macos-tray"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Native AppKit NSStatusItem tray for Tillandsias on macOS; drives a Virtualization.framework-hosted headless tillandsias VM."
publish = false

[[bin]]
name = "tillandsias-tray"
path = "src/main.rs"

[dependencies]
tillandsias-host-shell = { path = "../tillandsias-host-shell" }
tillandsias-vm-layer = { path = "../tillandsias-vm-layer" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSApplication",
    "NSResponder",
    "NSRunningApplication",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSButton",
    "NSControl",
    "NSMenu",
    "NSMenuItem",
    "NSImage",
    "NSWorkspace",
    "NSEvent",
    # Required by src/status_item.rs: NSStatusItem::button returns
    # NSStatusBarButton (an NSView subclass) gated on NSView; NSMenuItem::
    # setState + NSControlStateValueOn live in the NSCell feature.
    "NSView",
    "NSCell",
] }
objc2-foundation = { version = "0.2", features = [
    "NSString",
    "NSURL",
    "NSArray",
    "NSDictionary",
    "NSUUID",
    "NSThread",
    "NSRunLoop",
    "NSDate",
    "NSGeometry",
] }
objc2-virtualization = "0.2"

[dev-dependencies]
tempfile = "3"
