[package]
name = "tillandsias-nanoclawv2-mcp"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Tlatoani"]
publish = false
description = "Host-resident MCP server for NanoClawV2 project-scoped orchestration."

[[bin]]
name = "tillandsias-nanoclawv2-mcp"
path = "src/main.rs"

[dependencies]
serde_json = "1"
libc = "0.2"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "rt-multi-thread", "process", "sync", "time", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Reuse the JSON-RPC framing from the browser-mcp crate.
tillandsias-browser-mcp = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
