[package]
name = "tillandsias-podman-cli"
version = "0.1.260518"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Approved infrastructure facade for Tillandsias Podman operations"

[dependencies]
tillandsias-podman = { workspace = true }
tokio = { workspace = true }
serde_json = "1"
