[package]
name = "tillandsias-podman"
version = "0.1.65"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Async podman CLI abstraction for Tillandsias"

[dependencies]
tillandsias-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
thiserror = { workspace = true }
