[package]
name = "tillandsias-podman"
version = "0.3.260712"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Async podman CLI abstraction for Tillandsias"

[dependencies]
tillandsias-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
# ISO-8601 UTC timestamps on the runtime-diagnostics launch-event stream.
chrono = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

