[package]
name = "tillandsias-policy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde_yaml.workspace = true
# `preserve_order` keeps `serde_json::Map` iteration in JSON insertion order so
# the distill-forge-diagnostics capability/recommendation listing is byte-for-
# byte identical to the former CPython extractor (which iterated dict order).
serde_json = { workspace = true, features = ["preserve_order"] }
sha2.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "term"] }
