[package]
name = "tillandsias-scanner"
version = "0.1.74"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Event-driven filesystem scanner for Tillandsias"

[dependencies]
tillandsias-core = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
