[package]
name = "tillandsias-secure-channel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Encrypted, version-bound control channel (PSK derivation + AEAD stream) shared by host tray, guest headless, and in-container agent"

# @trace plan/issues/encrypted-control-channel-research-2026-07-01.md
# @trace plan/issues/encrypted-control-channel-impl-2026-07-01.md

[dependencies]
hkdf = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
